fixed horizontal scroll bug

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -68,17 +68,20 @@
 html,
 body {
   font-family: var(--font-default);
-  max-width: 100vw;
-}
-
-body {
+  max-width: 100%;
+  // overflow-x: hidden;
   color: var(--color-text-secondary);
   background: var(--color-background-primary);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
+
+// body {
+//   color: var(--color-text-secondary);
+//   background: var(--color-background-primary);
+//   width: 100vw; // display: flex;
+//   // flex-direction: column;
+//   // align-items: center;
+// }
 
 a {
   color: inherit;
