--- a/src/components/Layout/Navbar/Navbar.module.scss
+++ b/src/components/Layout/Navbar/Navbar.module.scss
@@ -5,8 +5,9 @@
 
 .navWrapper {
     position: fixed;
-    width: 100%;
+    width: 100vw;
     top: 0.5rem;
+    left: 0;
     z-index: 1000;
     padding: var(--padding-page-desktop);
     max-width: var(--max-width-page-desktop);
